[package]
name = "gerrehbenta"
version = "0.1.0"
authors = ["Chad Nehemiah <chad.nehemiah94@gmail.com>"]
edition = "2021"


[dependencies]
anyhow = "1.0.94"
bytes = "1.9.0"
cfonts = "1.2.0"
chrono = "0.4.38"
clap = { version = "4.5.22", features = ["derive"] }
crossterm = "0.28.1"
ethers = { version = "2.0.14" }
futures = "0.3.31"
hyper = "1.5.1"
juniper = "0.16.1"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
ratatui = "0.29.0"
serde = "1.0.215"
simplelog = "0.12.2"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
