[package]
name = "reem-api"
version = "1.0.0"
authors = ["maschad <chad.nehemiah94@gmail.com>"]
edition = "2021"
license = "MIT"
description = "API for Reem"
repository= "https://github.com/maschad/reem"

[dependencies]
thiserror = "1.0"
actix-web = "3"
actix-cors = "0.4.0"
env_logger = "0.8"
serde_json = "1.0"
serde_derive = "1.0.103"
juniper = "0.15"